# lamet-agent

./: .gitignore  AGENTS.md  DEVELOPMENT.md  PLAN.md  README.md  pyproject.toml  test.py
docs/: analysis_model.md
examples/: bare_qpdf_manifest.json  demo_kernel.py  demo_manifest.json  pion_2pt_manifest.json  pion_cg_cs_kernel_manifest.json  pion_cg_qtmdpdf_manifest.json  proton_cg_qpdf_manifest.json  qpdf_ft_manifest.json  two_point_analysis_manifest.json  workflow_smoke_kernel.py  workflow_smoke_manifest.json
examples/data/: three_point_demo.csv  two_point_demo.csv  two_point_raw_demo.csv
examples/data/bare_qpdf/: README.md
examples/data/pion_2pt/: README.md  two_point_raw_demo.md  two_point_raw_demo.txt
examples/data/pion_cg_cs_kernel/: README.md  cs_kernel_literature_updated.gv
examples/data/pion_cg_qtmdpdf/: README.md  two_point_ss_p330.txt  (+15 more)
lqcd_analysis/: data.py  renormalization.py
raw_scripts/: asymptotic_extrapolaiton.py
raw_scripts/self_renormalization/: clv_Pion_milc1.txt  clv_Pion_rbc1.txt  head.py  pdf_self_renorm.py  自重整化说明.md
scripts/: extract_pion_cg_tmdpdf_example.py  prepare_cs_kernel_data.py  run_manifest.py
src/lamet_agent/: __init__.py  __main__.py  artifacts.py  cli.py  constants.py  errors.py  kernel.py  loaders.py  logging_utils.py  plotting.py  reporting.py  schemas.py  utils.py  workflows.py
tests/: test_auth_config.py  test_auth_oauth.py  test_auth_storage.py  test_constants.py  test_e2e.py  test_kernel.py  test_schemas.py  test_stages.py  test_three_point_analysis.py  test_two_point_analysis.py  test_workflows.py
(+38 files in other folders)
