[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamet-agent"
version = "0.1.0"
description = "CLI-first scaffolding for LaMET analysis workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.14",
  "matplotlib>=3.8",
  "pydantic>=2.8",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
analysis = [
  "gvar>=12.1",
  "lsqfit>=13.0",
  "h5py>=3.11",
]

[project.scripts]
lamet-agent = "lamet_agent.cli:entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
